z-index issue fixed product detail page

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5011,8 +5011,8 @@ textarea {
 }
 .ajaxlogin-window .f-left.ajaxlogin-forgot{clear: both;}
 #ajaxlogin-login-window .modal-holder {padding: 20px 0 0;}
-
-
+.modal {z-index: 999999;}
+.modal-backdrop {z-index: 99999;}
 
 
 
